# ai-todo

./: .env  Cargo.toml  docker-compose.yml
docs/: REST_API.md
migrations/: 20240122120000_create_todos_table.sql
scripts/: restart_server.sh
src/: app.rs  error.rs  main.rs  state.rs  validator.rs
src/models/: todo.rs
src/routes/: audio.rs  mod.rs  todos.rs
src/services/: gemini.rs
